# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "samsung/**/*.h",
    ]),
    visibility = [
        "//gs/google-modules/touch:__subpackages__",
    ],
)

kernel_module(
    name = "samsung.slider",
    srcs = glob([
        "samsung/**/*.c",
        "samsung/**/*.h",
        "Kbuild",
        "samsung/Kbuild",
        "samsung/panel/Kbuild",
    ]) + [
        "//gs/google-modules/display/include:headers",
        "//gs/kernel/device-modules:gs101_soc_headers",
    ],
    outs = [
        "samsung/exynos-drm.ko",
        "samsung/panel/panel-samsung-drv.ko",
        "samsung/panel/panel-samsung-emul.ko",
        "samsung/panel/panel-samsung-s6e3fc3.ko",
        "samsung/panel/panel-samsung-s6e3hc2.ko",
        "samsung/panel/panel-samsung-s6e3hc3.ko",
        "samsung/panel/panel-samsung-sofef01.ko",
    ],
    kernel_build = "//gs/kernel/device-modules:slider",
    kernel_module_deps = [
        "//gs/kernel/device-modules:gs101_soc",
    ],
    visibility = [
        "//gs/kernel/device-modules:__pkg__",
    ],
)
