# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "samsung/**/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/touch:__subpackages__",
    ],
)

kernel_module(
    name = "display.samsung",
    srcs = glob([
        "samsung/**/*.c",
        "samsung/**/*.h",
        "Kbuild",
        "samsung/Kbuild",
        "samsung/panel/Kbuild",
    ]) + [
        "//private/google-modules/display/include:headers",
        "//private/google-modules/hdcp/samsung:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "samsung/exynos-drm.ko",
        "samsung/exynos-drm-audio.ko",
        "samsung/panel/panel-boe-nt37290.ko",
        "samsung/panel/panel-common.ko",
        "samsung/panel/panel-samsung-drv.ko",
        "samsung/panel/panel-samsung-emul.ko",
        "samsung/panel/panel-samsung-s6e3fc3.ko",
        "samsung/panel/panel-samsung-s6e3fc3-p10.ko",
        "samsung/panel/panel-samsung-s6e3hc2.ko",
        "samsung/panel/panel-samsung-s6e3hc3.ko",
        "samsung/panel/panel-samsung-s6e3hc3-c10.ko",
        "samsung/panel/panel-samsung-s6e3hc4.ko",
        "samsung/panel/panel-samsung-sofef01.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/hdcp/samsung:hdcp.samsung",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
